fixed overflow-hidden cutting off bottom nav bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,5 @@ body {
 	background-color: var(--offwhite) !important;
 	height: 100vh;
 
-	overflow: hidden;
 	-webkit-font-smoothing: antialiased;
 }
